header z-index fixed + count item set in Cart compoent

--- a/frontend/src/app/Components/Header/Header.module.css
+++ b/frontend/src/app/Components/Header/Header.module.css
@@ -138,7 +138,7 @@
 
     display: flex;
     position: absolute;
-    z-index: 1;
+    z-index: 4;
     top: 123px;
     border-top: 0px;
     transition: .2s;
